overflow fix

--- a/websites/qmp/css/index.css
+++ b/websites/qmp/css/index.css
@@ -27,7 +27,7 @@ li {
 html {
     scroll-behavior: smooth;
     font-family: var(--fontFamily);
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 header {
